# LetsVertical

./: .gitignore  CMakeLists.txt  README.md  canvas.cpp  canvas.h  fontfile.cpp  fontfile.h  fontseeker.cpp  fontseeker.h  image.cpp  image.h  main.cpp  tag.cpp  tag.h
GSUB/: gsub.cpp  gsub.h
GSUB/FeatureList/: feature.cpp  feature.h  featurelist.cpp  featurelist.h  featurerecord.cpp  featurerecord.h
GSUB/LookupList/: coverage.cpp  coverage.h  lookup.cpp  lookup.h  lookuplist.cpp  lookuplist.h  lookupsubtabletype1.cpp  lookupsubtabletype1.h  rangerecord.cpp  rangerecord.h
GSUB/ScriptList/: langsys.cpp  langsys.h  langsysrecord.cpp  langsysrecord.h  script.cpp  script.h  scriptlist.cpp  scriptlist.h  scriptrecord.cpp  scriptrecord.h
Test/: canvastest.cpp  canvastest.h  fontanalysis.cpp  fontanalysis.h  fontanalysis_bitmap.cpp  fontanalysis_bitmap.h  fontfile_test.cpp  fontfile_test.h  fontseekertest.cpp  fontseekertest.h  gsubtest.cpp  gsubtest.h  imagetest.cpp  imagetest.h  tagtest.cpp  tagtest.h  test.h  writetest.cpp  writetest.h
doc/: class.plantuml  image_class.plantuml
